--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js"
+    "promise:test": "node promise/index.js"
   },
   "keywords": [],
   "author": "",
