--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "promise:test": "node promise/index.js"
+    "promise:test": "node promise/index.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
